# ostack-hpc

./: .rpmmacros  README  README.md  README_post  cloud_poc_design.docx  md5sum_1stupload  open_hpc_test_installation.README
hpc-orchestrator-tests/testsuite/: LICENSE  Makefile.am  Makefile.in  aclocal.m4  configure  configure.ac  run-tests
hpc-orchestrator-tests/testsuite/admin/: check_nodes  munge  nagios  run  warewulf
hpc-orchestrator-tests/testsuite/admin/spack/: run
hpc-orchestrator-tests/testsuite/apps/hpcg/: Makefile.hpc  build
hpc-orchestrator-tests/testsuite/apps/hpcg/family-intel-impi/: HPCG.32x32x32.P8.intel.impi.yaml  hpcg_log_2016.10.06.20.16.28.txt  job.20.out
hpc-orchestrator-tests/testsuite/apps/hpcg/logs/: log.HPCG
hpc-orchestrator-tests/testsuite/apps/miniDFT/: configure.ac
hpc-orchestrator-tests/testsuite/apps/miniDFT/integration-tests/: test_mpi_families
hpc-orchestrator-tests/testsuite/apps/miniDFT/tests/: build
hpc-orchestrator-tests/testsuite/apps/miniFE/: configure.ac
hpc-orchestrator-tests/testsuite/apps/miniFE/integration-tests/: test_mpi_families
hpc-orchestrator-tests/testsuite/apps/miniFE/tests/: build
hpc-orchestrator-tests/testsuite/apps/prk/: configure.ac
hpc-orchestrator-tests/testsuite/apps/prk/tests/: Makefile.hpc  (+1 more)
hpc-orchestrator-tests/testsuite/autom4te.cache/: output.0  requests  traces.0  traces.1
hpc-orchestrator-tests/testsuite/bos/: computes  ibv_devinfo  run
hpc-orchestrator-tests/testsuite/clck/: clck_tests  run
hpc-orchestrator-tests/testsuite/common/m4/: compiler_family.m4
hpc-orchestrator-tests/testsuite/compilers/: configure.ac
hpc-orchestrator-tests/testsuite/compilers/integration-tests/: test_compiler_families
hpc-orchestrator-tests/testsuite/dev-tools/R-base/: Makefile.in  configure.ac
hpc-orchestrator-tests/testsuite/dev-tools/cilk/: Makefile.in  configure.ac
hpc-orchestrator-tests/testsuite/dev-tools/easybuild/: run
hpc-orchestrator-tests/testsuite/dev-tools/intel-inspector/: configure.ac
hpc-orchestrator-tests/testsuite/dev-tools/numpy/: Makefile.in
hpc-orchestrator-tests/testsuite/dev-tools/scipy/: Makefile.in
hpc-orchestrator-tests/testsuite/dev-tools/tbb/: Makefile.in  configure.ac
hpc-orchestrator-tests/testsuite/dev-tools/valgrind/: configure.ac
hpc-orchestrator-tests/testsuite/install/: nodes_installed
hpc-orchestrator-tests/testsuite/libs/adios/: bootstrap
hpc-orchestrator-tests/testsuite/libs/boost/: configure.ac
hpc-orchestrator-tests/testsuite/libs/boost-mpi/: configure.ac
hpc-orchestrator-tests/testsuite/libs/fftw/: configure.ac
hpc-orchestrator-tests/testsuite/libs/gsl/: configure.ac
hpc-orchestrator-tests/testsuite/libs/hypre/: configure.ac
hpc-orchestrator-tests/testsuite/libs/imb/: configure.ac
hpc-orchestrator-tests/testsuite/libs/metis/: configure.ac
hpc-orchestrator-tests/testsuite/libs/mumps/: configure.ac
hpc-orchestrator-tests/testsuite/libs/netcdf/: configure.ac
hpc-orchestrator-tests/testsuite/libs/openblas/: configure.ac
hpc-orchestrator-tests/testsuite/libs/petsc/: configure.ac
hpc-orchestrator-tests/testsuite/libs/phdf5/: configure.ac
hpc-orchestrator-tests/testsuite/libs/scalapack/: configure.ac
hpc-orchestrator-tests/testsuite/libs/superlu/: configure.ac
hpc-orchestrator-tests/testsuite/libs/superlu_dist/: configure.ac
hpc-orchestrator-tests/testsuite/libs/trilinos/: configure.ac
hpc-orchestrator-tests/testsuite/lustre/: local_commands  rm_commands  run
hpc-orchestrator-tests/testsuite/lustre/common/: functions
hpc-orchestrator-tests/testsuite/modules/: rm_execution  run
hpc-orchestrator-tests/testsuite/mpi/: configure.ac
hpc-orchestrator-tests/testsuite/mpi/integration-tests/: test_mpi_families
hpc-orchestrator-tests/testsuite/mpi/tests/: version_match
hpc-orchestrator-tests/testsuite/oob/: ipmitool  run
hpc-orchestrator-tests/testsuite/packaging/: powerman  run  slurm-sql  warewulf-nhc
hpc-orchestrator-tests/testsuite/perf-tools/intel-advisor/: run
hpc-orchestrator-tests/testsuite/perf-tools/intel-itac/: run  test_module
hpc-orchestrator-tests/testsuite/perf-tools/intel-vtune/: configure.ac
hpc-orchestrator-tests/testsuite/perf-tools/mpiP/: configure.ac
hpc-orchestrator-tests/testsuite/perf-tools/papi/: configure.ac
hpc-orchestrator-tests/testsuite/perf-tools/tau/: Makefile.in  configure.ac
hpc-orchestrator-tests/testsuite/rms-harness/: configure.ac
hpc-orchestrator-tests/testsuite/rms-harness/integration-tests/: test_mpi_families
hpc-orchestrator-tests/testsuite/runtimes/ocr/: configure.ac
hpc-orchestrator-tests/testsuite/user-env/: mem_limits  run
hpc-orchestrator-tests/testsuite/user-env-oom/: configure.ac
(+428 files in other folders)
